[molecule_counting] Updated NAO notebooks.

--- a/paulssonlab/src/paulssonlab/projects/molecule_counting/Analysis_Old_NAO.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/molecule_counting/Analysis_Old_NAO.ipynb
@@ -42,13 +42,13 @@
    "source": [
     "# with open('190311photobleaching.pickle', 'rb') as f:\n",
     "# with open('all_data.pickle', 'rb') as f:\n",
-    "# with open('190313photobleaching_noflatcorr.pickle', 'rb') as f:\n",
+    "# with open('/n/groups/paulsson/jqs1/molecule-counting/190313photobleaching.pickle', 'rb') as f:\n",
     "# with open('/n/groups/paulsson/nao5/molecule-counting/190604_mothermachine.pickle', 'rb') as f:\n",
     "# with open('/n/groups/paulsson/jqs1/molecule-counting/200110photobleaching.pickle', 'rb') as f:\n",
     "# with open('/n/groups/paulsson/jqs1/molecule-counting/200123photobleaching.pickle', 'rb') as f:\n",
     "# with open('/n/groups/paulsson/jqs1/molecule-counting/200129photobleaching.pickle', 'rb') as f:\n",
     "with open(\n",
-    "    \"/n/groups/paulsson/jqs1/molecule-counting/200302photobleaching.pickle\", \"rb\"\n",
+    "    \"/n/groups/paulsson/jqs1/molecule-counting/200329photobleaching.pickle\", \"rb\"\n",
     ") as f:\n",
     "    d = pickle.load(f)\n",
     "list(d.keys())"
@@ -68,7 +68,7 @@
     "gfp_dir = \"/n/scratch2/jqs1/190604/GFP_FITC_100ms_60pct.nd2\"\n",
     "\n",
     "\n",
-    "new_dir = \"200127/GFP-mkate/*.nd2\"\n",
+    "new_dir = \"200122/mkate-GFP/*.nd2\"\n",
     "channel = \"GFP-PENTA\"\n",
     "\n",
     "mkate50_bad_fov = [0, 3, 5, 6, 7]\n",
@@ -83,12 +83,15 @@
     "        \"200127/mkate-GFP/*.nd2\": [],\n",
     "        \"200127/GFP_chromosomal/*.nd2\": [0],\n",
     "        \"200127/GFP_plasmid/*.nd2\": [0, 1, 2, 3, 6] + [5],\n",
+    "        \"200122/mkate-GFP/*.nd2\": [],\n",
     "    },\n",
     "    \"RFP-PENTA\": {\n",
     "        \"200127/GFP-mkate/*.nd2\": [4, 5, 6],\n",
     "        \"200127/mkate-GFP/*.nd2\": [],\n",
     "        \"200127/mkate_chromosomal/*.nd2\": [0, 2, 3, 4, 5, 6, 7, 8],\n",
     "        \"200127/mkate_plasmid/*.nd2\": [0, 1, 2, 4, 5, 6, 7, 8],\n",
+    "        \"200116/2x_mkate/*.nd2\": [],\n",
+    "        \"191312/R_RG/*.nd2\": [],\n",
     "    },\n",
     "}\n",
     "# data = molco.process_df(d,mkate50_dir,mkate50_bad_fov,6,1.8,.9)\n",
@@ -114,7 +117,7 @@
     "gfp_dir = \"/n/scratch2/jqs1/190604/GFP_FITC_100ms_60pct.nd2\"\n",
     "\n",
     "\n",
-    "new_dir = \"200227/mKate2hyb_2x/*.nd2\"\n",
+    "new_dir = \"200306/*.nd2\"\n",
     "channel = \"RFP-PENTA\"\n",
     "# channel = 'YFP-DUAL'\n",
     "\n",
@@ -126,25 +129,72 @@
     "\n",
     "fusion_bad_fov = {\n",
     "    \"YFP-DUAL\": {\n",
-    "        \"200227/mKate2hyb-mVenus/*.nd2\": [4, 5, 6, 7, 8],\n",
+    "        \"200227/mKate2hyb-mVenus/*.nd2\": [],\n",
     "        \"200227/mVenus-mKate2hyb/*.nd2\": [],\n",
     "        \"200127/GFP_chromosomal/*.nd2\": [0],\n",
     "        \"200127/GFP_plasmid/*.nd2\": [0, 1, 2, 3, 6] + [5],\n",
     "    },\n",
     "    \"RFP-PENTA\": {\n",
-    "        \"200227/mKate2hyb-mVenus/*.nd2\": [0, 1, 3, 4, 5, 6, 7, 8],\n",
-    "        \"200227/mKate2hyb_genomic/*.nd2\": [1, 2, 3, 4, 5, 6, 7, 8],\n",
+    "        \"200227/mKate2hyb-mVenus/*.nd2\": [],\n",
+    "        \"200227/mKate2hyb_genomic/*.nd2\": [1, 2, 3, 4, 5, 6, 8] + [7],\n",
     "        \"200227/mKate2hyb_2x/*.nd2\": [],\n",
     "        \"200127/mkate_chromosomal/*.nd2\": [0, 2, 3, 4, 5, 6, 7, 8],\n",
     "        \"200127/mkate_plasmid/*.nd2\": [0, 1, 2, 4, 5, 6, 7, 8],\n",
     "    },\n",
     "}\n",
+    "rfp_fovs = {\n",
+    "    new_dir: {k: v for k, v in d[\"200306/*.nd2\"].items() if k[1] == \"RFP-PENTA\"}\n",
+    "}\n",
+    "yfp_fovs = {new_dir: {k: v for k, v in d[\"200306/*.nd2\"].items() if k[1] == \"YFP-DUAL\"}}\n",
+    "\n",
     "# data = molco.process_df(d,mkate50_dir,mkate50_bad_fov,6,1.8,.9)\n",
     "# data = molco.process_df(d,mkate100_dir,mkate100_bad_fov,6,1.3,.90)\n",
     "# data = molco.process_df(d,mvenus_dir,mvenus_bad_fov,6,1.5,.9)\n",
     "# data = molco.process_df(d,gfp_dir,gfp_bad_fov,6,1.2,.95)\n",
     "data = molco.process_df(\n",
-    "    d, new_dir, fusion_bad_fov[channel][new_dir], 6, 2, 0.970, fusion=True, fp=channel\n",
+    "    #     d, new_dir, fusion_bad_fov[channel][new_dir], 6, 2, 0.970, fusion=True, fp=channel\n",
+    "    rfp_fovs,\n",
+    "    new_dir,\n",
+    "    list(set(np.arange(0)) - {0}),\n",
+    "    6,\n",
+    "    2,\n",
+    "    0.970,\n",
+    "    fusion=True,\n",
+    "    fp=channel\n",
+    "    #     d, new_dir,[], 6, 2, 0.9, fusion=True, fp=channel\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(molco)\n",
+    "\n",
+    "mvenus_dir = \"/n/scratch2/jqs1/190604/mVenus_YFP_100ms_10pct.nd2\"\n",
+    "mkate50_dir = \"/n/scratch2/jqs1/190604/mkate_mcherry_100ms_50pct.nd2\"\n",
+    "mkate100_dir = \"/n/scratch2/jqs1/190604/mkate_mcherry_100ms_100pct.nd2\"\n",
+    "gfp_dir = \"/n/scratch2/jqs1/190604/GFP_FITC_100ms_60pct.nd2\"\n",
+    "\n",
+    "\n",
+    "new_dir = \"/home/jqs1/paulsson/fluorescence/190313_mkate_100ms_50pct_laser.nd2\"\n",
+    "channel = \"RFP-PENTA\"\n",
+    "# channel = 'YFP-DUAL'\n",
+    "\n",
+    "mkate50_bad_fov = [0, 3, 5, 6, 7]\n",
+    "mkate100_bad_fov = [1, 8, 10, 17, 19, 20]\n",
+    "mvenus_bad_fov = [0]\n",
+    "# mvenus_bad_fov = [0,8,9,10,11,12,13,14,15,16,17]\n",
+    "gfp_bad_fov = [8, 10, 11, 12, 13, 14, 15, 16, 17]\n",
+    "\n",
+    "# data = molco.process_df(d,mkate50_dir,mkate50_bad_fov,6,1.8,.9)\n",
+    "data = molco.process_df(d, mkate100_dir, mkate100_bad_fov, 6, 1.3, 0.90)\n",
+    "# data = molco.process_df(d,mvenus_dir,mvenus_bad_fov,6,1.5,.9)\n",
+    "# data = molco.process_df(d,gfp_dir,gfp_bad_fov,6,1.2,.95)\n",
+    "data.rename(\n",
+    "    columns={\"centroid_y\": \"centroid-0\", \"centroid_x\": \"centroid-1\"}, inplace=True\n",
     ")"
    ]
   },
@@ -160,22 +210,23 @@
     "\n",
     "tabs = pn.Tabs()\n",
     "for i, fov in enumerate(list(d[new_dir].keys())):\n",
-    "    seg_frame = np.asarray(d[new_dir][fov][\"segmentation_frame\"])\n",
-    "    label_frame = segmentation.permute_labels(np.asarray(d[new_dir][fov][\"labels\"]))\n",
+    "    if i < 9:\n",
+    "        seg_frame = np.asarray(d[new_dir][fov][\"segmentation_frame\"])\n",
+    "        label_frame = segmentation.permute_labels(np.asarray(d[new_dir][fov][\"labels\"]))\n",
     "\n",
-    "    x_coord = np.arange(seg_frame.shape[1])\n",
-    "    y_coord = np.arange(seg_frame.shape[0])\n",
-    "    seg_frame = hv.Dataset((x_coord, y_coord, seg_frame), [\"x\", \"y\"], \"Fluor\")\n",
-    "    label_frame = hv.Dataset((x_coord, y_coord, label_frame), [\"x\", \"y\"], \"label\")\n",
-    "    img = datashade(seg_frame.to(hv.Image, [\"x\", \"y\"], \"Fluor\"), cmap=cm.jet).opts(\n",
-    "        bgcolor=\"black\", active_tools=[\"wheel_zoom\"], width=250, height=150\n",
-    "    )\n",
-    "    labels = datashade(label_frame.to(hv.Image, [\"x\", \"y\"], \"label\"), cmap=cm.hot).opts(\n",
-    "        bgcolor=\"black\", active_tools=[\"wheel_zoom\"], width=250, height=150\n",
-    "    )\n",
+    "        x_coord = np.arange(seg_frame.shape[1])\n",
+    "        y_coord = np.arange(seg_frame.shape[0])\n",
+    "        seg_frame = hv.Dataset((x_coord, y_coord, seg_frame), [\"x\", \"y\"], \"Fluor\")\n",
+    "        label_frame = hv.Dataset((x_coord, y_coord, label_frame), [\"x\", \"y\"], \"label\")\n",
+    "        img = datashade(seg_frame.to(hv.Image, [\"x\", \"y\"], \"Fluor\"), cmap=cm.jet).opts(\n",
+    "            bgcolor=\"black\", active_tools=[\"wheel_zoom\"], width=250, height=150\n",
+    "        )\n",
+    "        labels = datashade(\n",
+    "            label_frame.to(hv.Image, [\"x\", \"y\"], \"label\"), cmap=cm.hot\n",
+    "        ).opts(bgcolor=\"black\", active_tools=[\"wheel_zoom\"], width=250, height=150)\n",
     "\n",
-    "    combo = img + labels\n",
-    "    tabs.append((f\"FOV: {i}\", combo))\n",
+    "        combo = img + labels\n",
+    "        tabs.append((f\"FOV: {i}\", combo))\n",
     "\n",
     "tabs.clone(closable=True)"
    ]
@@ -234,27 +285,33 @@
     "#               0: [2000, 4500], t_end-1: [500,1000],\n",
     "#              'k': [.003,.0045]}\n",
     "prop_dict = {\n",
-    "    \"centroid-1\": [2000, 3000],\n",
-    "    \"centroid-0\": [1000, 2000],\n",
+    "    \"centroid-1\": [1500, 4000],\n",
+    "    \"centroid-0\": [1000, 3000],\n",
     "    \"area\": [\n",
     "        data.area.median() - 3 * data.area.std(),\n",
     "        data.area.median() + 3 * data.area.std(),\n",
     "    ],\n",
-    "    0: [500, 15000],\n",
+    "    0: [1000, 25000],\n",
     "    \"k\": [0.005, 0.02],\n",
     "}\n",
     "# prop_dict = {\n",
-    "#             'centroid_y': [400, 1600],\n",
-    "#              'centroid_x': [700,1800],\n",
+    "#             'centroid-0': [400, 1600],\n",
+    "#              'centroid-1': [700,1800],\n",
     "#              'area': [data.area.median() - 2*data.area.std(), data.area.median() + 2*data.area.std()],\n",
-    "#              0: [500, 3000], 'k': [.001,.02]}#, 1150:[0,350]}\n",
+    "#              0: [500, 5000], 'k': [.001,.02]}#, 1150:[0,350]}\n",
     "df = molco.filter_df(data, prop_dict)\n",
     "\n",
-    "fig, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=(12, 5))\n",
+    "fig, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=(16, 5))\n",
     "ax1.hist(df.k, bins=30)\n",
+    "ax1.set_xlabel(\"Decay Rate\", fontsize=24)\n",
+    "ax1.set_ylabel(\"Count\", fontsize=24)\n",
     "ax2.hist(df[0], bins=30)\n",
+    "ax2.set_xlabel(\"Initial Intensity\", fontsize=24)\n",
+    "ax2.set_ylabel(\"Count\", fontsize=24)\n",
     "ax3.hist(df.area, bins=30)\n",
-    "\n",
+    "ax3.set_xlabel(\"Cell Area\", fontsize=24)\n",
+    "ax3.set_ylabel(\"Count\", fontsize=24)\n",
+    "fig.tight_layout()\n",
     "q = 1\n",
     "\n",
     "f_predicted, fbar, p, mu, sigma2, y = molco.fluct_plot(df, n=2)\n",
@@ -268,7 +325,7 @@
     "plt.figure(figsize=(10, 8))\n",
     "yn = y.apply(lambda col: col / col.iloc[0], axis=1)\n",
     "tp = np.arange(yn.shape[1]) * 0.2\n",
-    "plt.semilogy(tp, yn.T.values[:, ::10], linewidth=3)\n",
+    "plt.semilogy(tp, yn.T.values[:, ::1], linewidth=3)\n",
     "plt.semilogy(tp, mu / mu[0], \"b\", linewidth=7, alpha=0.7, label=r\"$\\mu$\")\n",
     "plt.xlabel(\"Time\", fontsize=28)\n",
     "plt.ylabel(\"Fluorescence\", fontsize=28)\n",
@@ -339,7 +396,7 @@
     "# fig, axs = plt.subplots(3, 3)\n",
     "# axs = axs.ravel()\n",
     "\n",
-    "for fov in range(9):\n",
+    "for fov in range(25):\n",
     "    df_fov = df[df[\"fov\"] == fov]\n",
     "    y = df_fov.filter(regex=\"^[0-9]+$\", axis=1).iloc[:50]\n",
     "    p = y.apply(exp_fit, axis=1)\n",
@@ -347,7 +404,7 @@
     "    k = p[[3, 4]]\n",
     "    k.values.sort(axis=1)\n",
     "    plt.scatter(k[4], I0, alpha=0.5, s=400, label=str(fov))\n",
-    "    plt.xlim([0.01, 0.04])\n",
+    "    #     plt.xlim([0.01, 0.04])\n",
     "    #     plt.ylim([.005,.02])\n",
     "    plt.legend()\n",
     "fig.tight_layout()"
@@ -359,20 +416,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(24, 20))\n",
+    "plt.figure(figsize=(12, 10))\n",
     "# fig, axs = plt.subplots(3, 3)\n",
     "# axs = axs.ravel()\n",
-    "\n",
-    "for fov in range(9):\n",
+    "plt.rc(\"xtick\", labelsize=24)\n",
+    "plt.rc(\"ytick\", labelsize=24)\n",
+    "for fov in range(0, 25):\n",
     "    df_fov = df[df[\"fov\"] == fov]\n",
-    "    y = df_fov.filter(regex=\"^[0-9]+$\", axis=1).iloc[:50]\n",
+    "    y = df_fov.filter(regex=\"^[0-9]+$\", axis=1).iloc[:15]\n",
     "    p = y.apply(exp_fit, axis=1)\n",
     "    k = p[[3, 4]]\n",
     "    k.values.sort(axis=1)\n",
     "    plt.scatter(k[3], k[4], alpha=0.5, s=200, label=str(fov))\n",
-    "    plt.xlim([0.003, 0.01])\n",
-    "    plt.ylim([0.01, 0.04])\n",
+    "    plt.xlabel(r\"$k_1$\", fontsize=30)\n",
+    "    plt.ylabel(r\"$k_2$\", fontsize=30)\n",
+    "    plt.xlim([0, 0.01])\n",
+    "    plt.ylim([0, 0.02])\n",
     "    plt.legend()\n",
+    "\n",
     "fig.tight_layout()"
    ]
   },
@@ -385,27 +446,36 @@
     "# plt.figure(figsize=(24,20))\n",
     "fig, axs = plt.subplots(1, 2, figsize=(20, 10))\n",
     "axs = axs.ravel()\n",
-    "\n",
-    "for fov in range(9):\n",
+    "clist = [\"b\", \"g\", \"r\", \"c\", \"y\"]\n",
+    "for fov in range(0, 25, 1):\n",
     "    df_fov = df[df[\"fov\"] == fov]\n",
     "    y = df_fov.filter(regex=\"^[0-9]+$\", axis=1)\n",
     "    mu = y.apply(np.mean, axis=0)\n",
-    "    p = exp_fit(mu)\n",
-    "    k = p[[3, 4]].sort_values()\n",
-    "    print(k)\n",
-    "    tp = np.arange(0, mu.size)\n",
-    "    fit = mu[0] * molco.sum_exp(tp, list(p))\n",
-    "    #     k = p[[3,4]]\n",
-    "    #     k.values.sort(axis=1)\n",
-    "    #     plt.scatter(k[3],k[4],alpha=.5,s=200,label=str(fov))\n",
-    "    #     plt.xlim([.003,.01])\n",
-    "    #     plt.ylim([.01,.04])\n",
-    "    axs[0].semilogy((mu), linewidth=8, alpha=0.5, label=str(fov) + str(k.values))\n",
-    "    axs[0].semilogy((fit), linewidth=6, alpha=0.5, linestyle=\":\", color=\"k\")\n",
-    "    axs[0].legend()\n",
-    "    axs[1].scatter(k.iloc[0], k.iloc[1], alpha=0.5, s=200, label=str(fov))\n",
-    "    axs[1].set_xlim([0.004, 0.009])\n",
-    "    axs[1].set_ylim([0.01, 0.04])\n",
+    "    if not np.isnan(mu[0]):\n",
+    "        p = exp_fit(mu)\n",
+    "        k = p[[3, 4]].sort_values()\n",
+    "        print(k)\n",
+    "        tp = np.arange(0, mu.size)\n",
+    "        fit = mu[0] * molco.sum_exp(tp, list(p))\n",
+    "        #     k = p[[3,4]]\n",
+    "        #     k.values.sort(axis=1)\n",
+    "        #     plt.scatter(k[3],k[4],alpha=.5,s=200,label=str(fov))\n",
+    "        #     plt.xlim([.003,.01])\n",
+    "        #     plt.ylim([.01,.04])\n",
+    "        axs[0].semilogy(\n",
+    "            (mu),\n",
+    "            linewidth=8,\n",
+    "            alpha=0.5,\n",
+    "            label=str(fov) + str(k.values),\n",
+    "            color=clist[fov % 5],\n",
+    "        )\n",
+    "        axs[0].semilogy((fit), linewidth=6, alpha=0.5, linestyle=\":\", color=\"k\")\n",
+    "        axs[0].legend(fontsize=20)\n",
+    "        axs[1].scatter(\n",
+    "            k.iloc[0], k.iloc[1], alpha=0.5, s=600, label=str(fov), color=clist[fov % 5]\n",
+    "        )\n",
+    "        axs[1].set_xlim([0.005, 0.01])\n",
+    "        axs[1].set_ylim([0.00, 0.015])\n",
     "fig.tight_layout()"
    ]
   },
