[deaton/trenchripper] changed formatting.

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
@@ -97,10 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true,
-    "toc-nb-collapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Start Dask Workers\n",
     "\n",
@@ -273,9 +270,7 @@
    "source": [
     "#### Initialize the interactive kymograph class\n",
     "\n",
-    "As a first step, initialize the `tr.interactive.kymograph_interactive` class that will be help us choose the <br>parameters we will use to generate kymographs. \n",
-    "\n",
-    "maybe add more here..."
+    "As a first step, initialize the `tr.interactive.kymograph_interactive` class that will be help us choose the <br>parameters we will use to generate kymographs. "
    ]
   },
   {
@@ -285,6 +280,15 @@
    "outputs": [],
    "source": [
     "interactive_kymograph = tr.kymograph_interactive(headpath)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Examine Images\n",
+    "\n",
+    "Here you can manually inspect images before beginning parameter tuning."
    ]
   },
   {
@@ -300,19 +304,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The arguments for this extractor are:\n",
+    "You will now want to select a few test FOVs to try out parameters on, the channel you want to detect trenches on, and the time interval on which you will perform your processing.\n",
     "\n",
-    "- **input_file_prefix (string)** : File prefix for all input hdf5 files of the form `[input_file_prefix][number].hdf5` This should be the default output format for the hdf5 export code, but you will need to rename files if taking input files from a different source.\n",
+    "The arguments for this step are:\n",
     "\n",
-    "- **all_channels (list)** : list of strings corresponding to the different image channels available in the input hdf5 file, with the channel used for segmenting trenches in the first position. NOTE: these names must match those of the input hdf5 file datasets.\n",
+    "- **seg_channel (string)** : File prefix for all input hdf5 files of the form `[input_file_prefix][number].hdf5` This should be the default output format for the hdf5 export code, but you will need to rename files if taking input files from a different source.\n",
+    "\n",
+    "- **invert (list)** : list of strings corresponding to the different image channels available in the input hdf5 file, with the channel used for segmenting trenches in the first position. NOTE: these names must match those of the input hdf5 file datasets.\n",
     "\n",
     "- **fov_list (list)** : List of ints corresponding to the fovs that you wish to make kymographs of.\n",
     "\n",
-    "- **t_subsample_step (int)** : Step size to be used for subsampling input files in time, recommend that subsampling results in between 5 and 20 timepoints for quick processing.\n",
-    "\n",
     "- **t_range (tuple of ints)** : Range size to be used for subsampling input files in time.\n",
     "\n",
-    "The last line will perform import and subsampling of the input hdf5 image files."
+    "- **t_subsample_step (int)** : Step size to be used for subsampling input files in time, recommend that subsampling results in between 5 and 20 timepoints for quick processing.\n",
+    "\n",
+    "moo"
    ]
   },
   {
