[deaton/trenchripper] Removed time cropping from kymograph step; moved to extraction step. Also changed some interactive settings to be more flexible.

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
@@ -197,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hdf5_extractor.inter_get_notes()"
+    "hdf5_extractor.inter_set_params()"
    ]
   },
   {
@@ -253,10 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true,
-    "toc-nb-collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Test Parameters\n",
     "\n"
@@ -558,7 +555,7 @@
     "    local=False,\n",
     "    n_workers=50,\n",
     "    memory=\"8GB\",\n",
-    "    working_directory=\"/n/scratch2/de64/2019-11-09_CN_Growth_Curve/\",\n",
+    "    working_directory=headpath + \"/dask\",\n",
     ")\n",
     "dask_controller.startdask()"
    ]
@@ -569,7 +566,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dask_controller.displaydashboard()"
+    "dask_controller.daskclient"
    ]
   },
   {
@@ -590,15 +587,6 @@
    "outputs": [],
    "source": [
     "kymoclust.generate_kymographs(dask_controller)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dask_controller.futures[\"Smoothed X Percentiles: 1\"].result()"
    ]
   },
   {
@@ -1349,9 +1337,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib widget\n",
+    "from ipywidgets import interactive, IntText, IntSlider\n",
     "\n",
-    "kyview = tr.analysis.kymograph_viewer(headpath, \"mCherry\", \"fluorsegmentation\")"
+    "kyview = tr.analysis.kymograph_viewer(headpath, \"Phase\", \"fluorsegmentation\")"
    ]
   },
   {
@@ -1360,6 +1348,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib widget\n",
     "kyviewer = interactive(\n",
     "    kyview.inspect_trench,\n",
     "    {\"manual\": True},\n",
