[deaton/trenchripper] minor Master.ipynb and interactive revisions.

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
@@ -152,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Perform Extraction\n",
+    "##### Perform Extraction\n",
     "\n",
     "Now that we have our cluster scheduler spun up, it is time to convert files. This will be handled by the <br>`hdf5_extractor` object. This extractor will pull up each FOV and split it such that each derived `.hdf5` file <br>contains, at maximum, N timepoints of that FOV per file. The image data stored in these files takes the <br>form of `(N,Y,X)` arrays that are accessible using the desired channel name as a key. \n",
     "\n",
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Shutdown Dask\n",
+    "##### Shutdown Dask\n",
     "\n",
     "Once extraction is complete, it is likely that you will want to shutdown your `dask_controller` if you are on a <br>cluster. This is because the specifications of the current `dask_controller` will not be optimal for later steps. <br>To do this, run the following line and wait for it to complete."
    ]
@@ -265,7 +265,7 @@
     "toc-hr-collapsed": false
    },
    "source": [
-    "#### Initialize the interactive kymograph class\n",
+    "##### Initialize the interactive kymograph class\n",
     "\n",
     "As a first step, initialize the `tr.interactive.kymograph_interactive` class that will be help us choose the <br>parameters we will use to generate kymographs. "
    ]
@@ -283,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Examine Images\n",
+    "##### Examine Images\n",
     "\n",
     "Here you can manually inspect images before beginning parameter tuning."
    ]
@@ -331,7 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Tune \"trench-row\" detection hyperparameters\n",
+    "##### Tune \"trench-row\" detection hyperparameters\n",
     "\n",
     "The kymograph code begins by detecting the positions of trench rows in the image as follows:\n",
     "\n",
@@ -366,7 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Tune \"trench-row\" cropping hyperparameters\n",
+    "##### Tune \"trench-row\" cropping hyperparameters\n",
     "\n",
     "Next, we will use the detected rows to perform cropping of the input image in the y-dimension:\n",
     "\n",
@@ -402,7 +402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Generate \"trench-row\" cropping output\n",
+    "##### Generate \"trench-row\" cropping output\n",
     "\n",
     "After determining your desired hyperparameters, set them in the next cell and run it to produce output for later steps."
    ]
@@ -411,7 +411,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Tune trench detection hyperparameters\n",
+    "##### Tune trench detection hyperparameters\n",
     "\n",
     "Next, we will detect the positions of trenchs in the y-cropped images as follows:\n",
     "\n",
@@ -451,7 +451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Check midpoint drift\n",
+    "##### Check midpoint drift\n",
     "\n",
     "Next, we will perform x-dimension drift correction of our detected midpoints as follows:\n",
     "\n",
@@ -469,19 +469,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "interactive_kymograph.preview_midpoints_interactive()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Tune trench cropping hyperparameters\n",
+    "##### Tune trench cropping hyperparameters\n",
     "\n",
     "Trench cropping simply uses the drift-corrected midpoints as a reference and crops out some fixed length around them to produce an output kymograph\n",
     "\n",
@@ -509,7 +500,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Export and save hyperparameters"
+    "##### Export and save hyperparameters"
    ]
   },
   {
