[shenker/microscope_design] FP, objective, and laser spectral responses.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral spectral resolution.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral spectral resolution.ipynb
@@ -22,13 +22,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Spectral response"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def bin_spectrum(df, bins):\n",
-    "    bin_assignment = pd.cut(df[\"wavelength\"], bins).cat.rename_categories(\n",
+    "    bin_assignment = pd.cut(df.index, bins).rename_categories(\n",
     "        (bins.right + bins.left) / 2\n",
     "    )\n",
     "    return df.groupby(bin_assignment).mean()"
@@ -45,9 +52,9 @@
     "    \"mCherry2\": \"https://www.fpbase.org/spectra_csv/?q=1451,1450\",\n",
     "}\n",
     "spectra = {\n",
-    "    name: pd.read_csv(url).rename(\n",
-    "        columns={f\"{name} {kind}\": kind for kind in (\"ex\", \"em\", \"2p\")}\n",
-    "    )\n",
+    "    name: pd.read_csv(url)\n",
+    "    .rename(columns={f\"{name} {kind}\": kind for kind in (\"ex\", \"em\", \"2p\")})\n",
+    "    .set_index(\"wavelength\")\n",
     "    for name, url in spectra_urls.items()\n",
     "}"
    ]
@@ -78,9 +85,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hv.Curve(spectra[\"mCherry\"], \"wavelength\", \"em\") * hv.Curve(\n",
-    "    spectra[\"mCherry2\"], \"wavelength\", \"em\"\n",
-    ")"
+    "(\n",
+    "    hv.Curve(spectra[\"mCherry\"][\"em\"].dropna())\n",
+    "    * hv.Curve(spectra[\"mCherry2\"][\"em\"].dropna())\n",
+    ").opts(width=800)"
    ]
   },
   {
@@ -89,9 +97,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hv.Curve(binned_spectra[\"mCherry\"], \"wavelength\", \"em\") * hv.Curve(\n",
-    "    binned_spectra[\"mCherry2\"], \"wavelength\", \"em\"\n",
-    ")"
+    "(\n",
+    "    hv.Curve(binned_spectra[\"mCherry\"][\"em\"].dropna())\n",
+    "    * hv.Curve(binned_spectra[\"mCherry2\"][\"em\"].dropna())\n",
+    ").opts(width=800)"
    ]
   },
   {
@@ -100,7 +109,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = spectra[\"mCherry\"]"
+    "obj_transmission = pd.read_csv(\"uplxapo_20x.csv\", header=None)\n",
+    "obj_transmission.columns = [\"wavelength\", \"transmission\"]\n",
+    "obj_transmission.set_index(\"wavelength\", inplace=True)\n",
+    "hv.Curve(obj_transmission).opts(width=800)"
    ]
   },
   {
@@ -109,7 +121,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hv.Curve(binned, \"wavelength\", \"mCherry em\")"
+    "laser_power_shg = pd.read_csv(\"discovery_vue_shg.csv\", header=1).set_index(\"lambda\")\n",
+    "# laser_power_shg.columns = [\"power\"]\n",
+    "laser_power_pump = pd.read_csv(\"discovery_vue_pump.csv\", header=1).set_index(\"lambda\")\n",
+    "laser_power_pump.columns = [\"pump power\"]\n",
+    "laser_power = pd.concat(\n",
+    "    [\n",
+    "        laser_power_shg,\n",
+    "        laser_power_pump,\n",
+    "        laser_power_shg.rename(columns={\"SHG power\": \"power\"}).append(\n",
+    "            laser_power_pump.rename(columns={\"pump power\": \"power\"})\n",
+    "        ),\n",
+    "    ],\n",
+    "    axis=1,\n",
+    ")\n",
+    "laser_power.index.name = \"wavelength\"\n",
+    "hv.Curve(laser_power, \"wavelength\", \"power\").opts(width=800)"
    ]
   },
   {
@@ -217,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
