[deaton/trenchripper] A number of improvements. Including adding 8 bit conversion of hessian in interactive segmentation to make compatible with cluster code.

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-05-04_CN_Growth_Curve_Reanalysis/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-05-04_CN_Growth_Curve_Reanalysis/Master.ipynb
@@ -11,6 +11,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Experimental Notes\n",
+    "\n",
+    "1. For MM growth curve using \n",
+    "    - 0.2% Glycerol (2.5 mL in 250 mL), 100% NH4Cl (12.5 mL in 250 mL)\n",
+    "    - 0.4% Glycerol (5 mL in 500 mL), 2% NH4Cl (250 uL in 250 mL)\n",
+    "2. Imaging 2 lanes of SB111 (motA KO + pRNA1-mkate2hyb + prpoS-rpoS750-mVenus)\n",
+    "3. Imaged on Ti4 with 40X + 1.5 mag\n",
+    "4. Used 1.5 chip from Emanuele's 1.3/1.5 wafer\n",
+    "5. Cells in C limited media double loaded stably\n",
+    "6. Cells in N limited media did not double load\n",
+    "\n",
+    "- Analyze both datasets and pay close attention to growth/division\n",
+    "- Read up on the nitrogen response literature, lag time literature, and stationary phase literature (specifically damage in stationary phase)\n",
+    "- Get replisome and divisome reporters\n",
+    "- Use smaller (1.3 um or even 1.1 um) chips"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Introduction\n",
     "\n",
     "This notebook contains the entire `TrenchRipper` pipline, divided into simple steps. This pipline is ideal for Mother <br>Machine image data where cells possess fluorescent segmentation markers. Segmentation on phase or brightfield data <br>is being developed, but is still an experimental feature.\n",
@@ -42,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import trenchripper as tr\n",
+    "import paulssonlab.deaton.trenchripper.trenchripper as tr\n",
     "\n",
     "import warnings\n",
     "\n",
@@ -78,8 +99,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "headpath = \"/n/scratch2/de64/2019-05-31_validation_data\"\n",
-    "nd2file = \"/n/scratch2/de64/2019-05-31_validation_data/Main_Experiment.nd2\""
+    "headpath = \"/n/scratch2/de64/2019-11-09_CN_Growth_Curve\"\n",
+    "carbonheadpath = \"/n/scratch2/de64/2019-11-09_CN_Growth_Curve/Carbon\"\n",
+    "nitrogenheadpath = \"/n/scratch2/de64/2019-11-09_CN_Growth_Curve/Nitrogen\"\n",
+    "nd2file = \"/n/scratch2/de64/2019-11-09_CN_Growth_Curve/CN_Limited_GC_restart.nd2\""
    ]
   },
   {
@@ -123,7 +146,7 @@
     "dask_controller = tr.trcluster.dask_controller(\n",
     "    walltime=\"04:00:00\",\n",
     "    local=False,\n",
-    "    n_workers=20,\n",
+    "    n_workers=30,\n",
     "    memory=\"2GB\",\n",
     "    working_directory=headpath + \"/dask\",\n",
     ")\n",
@@ -177,7 +200,7 @@
    "source": [
     "hdf5_extractor = tr.ndextract.hdf5_fov_extractor(\n",
     "    nd2file,\n",
-    "    headpath,\n",
+    "    nitrogenheadpath,\n",
     "    tpts_per_file=50,\n",
     "    ignore_fovmetadata=False,\n",
     "    nd2reader_override={\"z_levels\": [], \"z_coordinates\": []},\n",
@@ -247,10 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true,
-    "toc-nb-collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Kymographs\n",
     "\n",
@@ -286,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interactive_kymograph = tr.kymograph_interactive(headpath)"
+    "interactive_kymograph = tr.kymograph_interactive(nitrogenheadpath)"
    ]
   },
   {
@@ -569,8 +589,8 @@
     "dask_controller = tr.trcluster.dask_controller(\n",
     "    walltime=\"04:00:00\",\n",
     "    local=False,\n",
-    "    n_workers=50,\n",
-    "    memory=\"8GB\",\n",
+    "    n_workers=100,\n",
+    "    memory=\"2GB\",\n",
     "    working_directory=headpath + \"/dask\",\n",
     ")\n",
     "dask_controller.startdask()"
@@ -623,7 +643,7 @@
    "outputs": [],
    "source": [
     "kymoclust = tr.kymograph.kymograph_cluster(\n",
-    "    headpath=headpath, trenches_per_file=25, paramfile=True\n",
+    "    headpath=carbonheadpath, trenches_per_file=25, paramfile=True\n",
     ")"
    ]
   },
@@ -717,10 +737,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true,
-    "toc-nb-collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Fluorescence Segmentation\n",
     "\n",
@@ -1448,7 +1465,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
+   },
    "source": [
     "## Phase Segmentation Training"
    ]
@@ -1936,10 +1956,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true,
-    "toc-nb-collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Other"
    ]
@@ -1959,9 +1976,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sourcedir = \"/n/files/SysBio/PAULSSON\\ LAB/Personal\\ Folders/Daniel/Image_Data/Bacillus_Project/2019-05-31_DE85_training_data/exp_folder\"\n",
-    "targetdir = \"/n/scratch2/de64/2019-05-31_validation_data\"\n",
-    "tr.trcluster.transferjob(sourcedir, targetdir)"
+    "sourcedir = \"/n/files/SysBio/PAULSSON\\ LAB/Personal\\ Folders/Daniel/Image_Data/RpoS/2019-11-09_CN_Limited_GC/data\"\n",
+    "targetdir = \"/n/scratch2/de64/2019-11-09_CN_Growth_Curve\"\n",
+    "tr.cluster.transferjob(sourcedir, targetdir)"
    ]
   },
   {
