--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-05-10_NN_Phase_Three_Methods/preparing_data.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-05-10_NN_Phase_Three_Methods/preparing_data.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import trenchripper as tr\n",
+    "import paulssonlab.deaton.trenchripper.trenchripper as tr\n",
     "\n",
     "import warnings\n",
     "\n",
@@ -717,10 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true,
-    "toc-nb-collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Fluorescence Segmentation\n",
     "\n",
@@ -1355,7 +1352,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
+   },
    "source": [
     "## Region Properties (No Lineage)"
    ]
@@ -1382,7 +1382,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
+   },
    "source": [
     "## Inspect Kymographs"
    ]
@@ -1448,7 +1451,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
+   },
    "source": [
     "## Phase Segmentation Training"
    ]
@@ -1612,7 +1618,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "toc-hr-collapsed": false
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
    },
    "source": [
     "### Hyperparameter (Grid) Search"
