--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-05-12_quick_silvia_thing/lineage_plasmid_loss.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-05-12_quick_silvia_thing/lineage_plasmid_loss.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import trenchripper as tr\n",
+    "import paulssonlab.deaton.trenchripper.trenchripper as tr\n",
     "\n",
     "import warnings\n",
     "\n",
@@ -78,13 +78,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "headpath = \"/n/scratch2/de64/2019-05-31_validation_data\"\n",
-    "nd2file = \"/n/scratch2/de64/2019-05-31_validation_data/Main_Experiment.nd2\""
+    "headpath = \"/n/scratch2/de64/2020-03-02_plasmid_loss/\"\n",
+    "nd2file = \"/n/scratch2/de64/2020-03-02_plasmid_loss/Basilisk_SJC25x2_SJC28_Losses.nd2\""
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
+   },
    "source": [
     "## Extract to hdf5 files\n",
     "\n",
@@ -123,7 +126,7 @@
     "dask_controller = tr.trcluster.dask_controller(\n",
     "    walltime=\"04:00:00\",\n",
     "    local=False,\n",
-    "    n_workers=20,\n",
+    "    n_workers=40,\n",
     "    memory=\"2GB\",\n",
     "    working_directory=headpath + \"/dask\",\n",
     ")\n",
@@ -180,7 +183,12 @@
     "    headpath,\n",
     "    tpts_per_file=50,\n",
     "    ignore_fovmetadata=False,\n",
-    "    nd2reader_override={\"z_levels\": [], \"z_coordinates\": []},\n",
+    "    nd2reader_override={\n",
+    "        \"z_levels\": [],\n",
+    "        \"z_coordinates\": [],\n",
+    "        \"fields_of_view\": list(range(71)),\n",
+    "        \"num_frames\": 275,\n",
+    "    },\n",
     ")"
    ]
   },
@@ -247,10 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true,
-    "toc-nb-collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Kymographs\n",
     "\n",
@@ -569,8 +574,8 @@
     "dask_controller = tr.trcluster.dask_controller(\n",
     "    walltime=\"04:00:00\",\n",
     "    local=False,\n",
-    "    n_workers=50,\n",
-    "    memory=\"8GB\",\n",
+    "    n_workers=100,\n",
+    "    memory=\"4GB\",\n",
     "    working_directory=headpath + \"/dask\",\n",
     ")\n",
     "dask_controller.startdask()"
@@ -717,10 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true,
-    "toc-nb-collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Fluorescence Segmentation\n",
     "\n",
@@ -810,15 +812,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kymo_arr = copy.copy(kymo_arr_int.result)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -852,53 +845,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proc_list_int = interactive(\n",
-    "    interactive_segmentation.plot_processed,\n",
-    "    {\"manual\": True},\n",
-    "    kymo_arr=fixed(kymo_arr),\n",
-    "    smooth_sigma=FloatSlider(\n",
-    "        value=0.75,\n",
-    "        description=\"Gaussian Kernel Sigma:\",\n",
-    "        min=0.0,\n",
-    "        max=3.0,\n",
-    "        step=0.25,\n",
-    "        disabled=False,\n",
-    "    ),\n",
-    "    bit_max=IntSlider(\n",
-    "        value=1000,\n",
-    "        description=\"8-bit Maximum:\",\n",
-    "        min=0,\n",
-    "        max=65535,\n",
-    "        step=250,\n",
-    "        disabled=False,\n",
-    "    ),\n",
-    "    scale=Dropdown(\n",
-    "        options=[True, False],\n",
-    "        value=True,\n",
-    "        description=\"Scale Fluorescence?\",\n",
-    "        disabled=False,\n",
-    "    ),\n",
-    "    scaling_percentile=IntSlider(\n",
-    "        value=90,\n",
-    "        description=\"Scaling Percentile:\",\n",
-    "        min=0,\n",
-    "        max=100,\n",
-    "        step=1,\n",
-    "        disabled=False,\n",
-    "    ),\n",
-    ")\n",
-    "\n",
-    "display(proc_list_int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "proc_list = copy.copy(proc_list_int.result)\n",
-    "eigval_list = interactive_segmentation.plot_eigval(proc_list)"
+    "interactive_segmentation.plot_processed_inter()"
    ]
   },
   {
@@ -924,51 +871,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_mask_list_int = interactive(\n",
-    "    interactive_segmentation.plot_cell_mask,\n",
-    "    {\"manual\": True},\n",
-    "    proc_list=fixed(proc_list),\n",
-    "    cell_mask_method=Dropdown(\n",
-    "        options=[\"local\", \"global\"],\n",
-    "        value=\"local\",\n",
-    "        description=\"Cell Mask Thresholding Method:\",\n",
-    "        disabled=False,\n",
-    "    ),\n",
-    "    global_threshold=IntSlider(\n",
-    "        value=50,\n",
-    "        description=\"Global Threshold:\",\n",
-    "        min=0,\n",
-    "        max=255,\n",
-    "        step=1,\n",
-    "        disabled=False,\n",
-    "    ),\n",
-    "    cell_otsu_scaling=FloatSlider(\n",
-    "        value=0.95,\n",
-    "        description=\"Cell Threshold Scaling:\",\n",
-    "        min=0.0,\n",
-    "        max=2.0,\n",
-    "        step=0.01,\n",
-    "        disabled=False,\n",
-    "    ),\n",
-    "    local_otsu_r=IntSlider(\n",
-    "        value=15,\n",
-    "        description=\"Local Otsu Radius:\",\n",
-    "        min=0,\n",
-    "        max=30,\n",
-    "        step=1,\n",
-    "        disabled=False,\n",
-    "    ),\n",
-    ")\n",
-    "display(cell_mask_list_int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cell_mask_list = copy.copy(cell_mask_list_int.result)"
+    "interactive_segmentation.plot_cell_mask_inter()"
    ]
   },
   {
@@ -990,29 +893,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "composite_mask_list_int = interactive(\n",
-    "    interactive_segmentation.plot_threshold_result,\n",
-    "    {\"manual\": True},\n",
-    "    eigval_list=fixed(eigval_list),\n",
-    "    cell_mask_list=fixed(cell_mask_list),\n",
-    "    edge_threshold_scaling=FloatSlider(\n",
-    "        value=1.0,\n",
-    "        description=\"Edge Threshold Scaling\",\n",
-    "        min=0.0,\n",
-    "        max=2.0,\n",
-    "        step=0.01,\n",
-    "        disabled=False,\n",
-    "    ),\n",
-    "    min_obj_size=IntSlider(\n",
-    "        value=30,\n",
-    "        description=\"Minimum Object Size:\",\n",
-    "        min=0,\n",
-    "        max=100,\n",
-    "        step=2,\n",
-    "        disabled=False,\n",
-    "    ),\n",
-    ")\n",
-    "display(composite_mask_list_int)"
+    "interactive_segmentation.plot_threshold_result_inter()"
    ]
   },
   {
@@ -1038,54 +919,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conv_scores_list_int = interactive(\n",
-    "    interactive_segmentation.plot_scores,\n",
-    "    {\"manual\": True},\n",
-    "    eigval_list=fixed(eigval_list),\n",
-    "    cell_mask_list=fixed(cell_mask_list),\n",
-    "    edge_threshold_scaling=FloatSlider(\n",
-    "        value=0.9,\n",
-    "        description=\"Edge Threshold Scaling\",\n",
-    "        min=0.0,\n",
-    "        max=2.0,\n",
-    "        step=0.01,\n",
-    "        disabled=False,\n",
-    "    ),\n",
-    "    threshold_step_perc=FloatSlider(\n",
-    "        value=0.05,\n",
-    "        description=\"Threshold Step Percent\",\n",
-    "        min=0.0,\n",
-    "        max=0.5,\n",
-    "        step=0.01,\n",
-    "        disabled=False,\n",
-    "    ),\n",
-    "    threshold_perc_num_steps=IntSlider(\n",
-    "        value=2,\n",
-    "        description=\"Number of Threshold Steps\",\n",
-    "        min=0,\n",
-    "        max=5,\n",
-    "        step=1,\n",
-    "        disabled=False,\n",
-    "    ),\n",
-    "    min_obj_size=IntSlider(\n",
-    "        value=30,\n",
-    "        description=\"Minimum Object Size:\",\n",
-    "        min=0,\n",
-    "        max=100,\n",
-    "        step=2,\n",
-    "        disabled=False,\n",
-    "    ),\n",
-    ")\n",
-    "display(conv_scores_list_int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conv_scores_list = copy.copy(conv_scores_list_int.result)"
+    "interactive_segmentation.plot_scores_inter()"
    ]
   },
   {
@@ -1107,20 +941,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_mask_list_int = interactive(\n",
-    "    interactive_segmentation.plot_final_mask,\n",
-    "    {\"manual\": True},\n",
-    "    conv_scores_list=fixed(conv_scores_list),\n",
-    "    convex_threshold=FloatSlider(\n",
-    "        value=0.75,\n",
-    "        description=\"Convexity Threshold:\",\n",
-    "        min=0.0,\n",
-    "        max=1.0,\n",
-    "        step=0.01,\n",
-    "        disabled=False,\n",
-    "    ),\n",
-    ")\n",
-    "display(final_mask_list_int)"
+    "interactive_segmentation.plot_final_mask_inter()"
    ]
   },
   {
@@ -1186,7 +1007,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "segment = tr.segment.fluo_segmentation_cluster(headpath, paramfile=True)"
+    "segment = tr.fluo_segmentation_cluster(headpath, paramfile=True)"
    ]
   },
   {
@@ -1216,10 +1037,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true,
-    "toc-nb-collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Lineage Tracing"
    ]
@@ -1305,11 +1123,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dask_controller = tr.trcluster.dask_controller(\n",
+    "dask_controller = tr.dask_controller(\n",
     "    walltime=\"01:00:00\",\n",
     "    local=False,\n",
     "    n_workers=100,\n",
-    "    memory=\"2GB\",\n",
+    "    memory=\"8GB\",\n",
     "    working_directory=headpath + \"/dask\",\n",
     ")\n",
     "dask_controller.startdask()"
@@ -1350,12 +1168,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dask_controller.futures[\"File Index: 0\"].result()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dask_controller.shutdown()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
+   },
    "source": [
     "## Region Properties (No Lineage)"
    ]
@@ -1382,7 +1212,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
+   },
    "source": [
     "## Inspect Kymographs"
    ]
@@ -1448,7 +1281,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
+   },
    "source": [
     "## Phase Segmentation Training"
    ]
@@ -1612,7 +1448,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "toc-hr-collapsed": false
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
    },
    "source": [
     "### Hyperparameter (Grid) Search"
@@ -1936,10 +1773,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true,
-    "toc-nb-collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Other"
    ]
@@ -1959,8 +1793,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sourcedir = \"/n/files/SysBio/PAULSSON\\ LAB/Personal\\ Folders/Daniel/Image_Data/Bacillus_Project/2019-05-31_DE85_training_data/exp_folder\"\n",
-    "targetdir = \"/n/scratch2/de64/2019-05-31_validation_data\"\n",
+    "sourcedir = \"/n/files/SysBio/PAULSSON\\ LAB/SILVIA/Ti4--Data/2020_03_28--PlasmidLosses_SJC25_SJC28/temp\"\n",
+    "targetdir = \"/n/scratch2/de64/2020-03-02_plasmid_loss\"\n",
     "tr.trcluster.transferjob(sourcedir, targetdir)"
    ]
   },
