[deaton/trenchripper] quick push.

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-05-12_quick_silvia_thing/lineage_plasmid_loss.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-05-12_quick_silvia_thing/lineage_plasmid_loss.ipynb
@@ -255,7 +255,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
+   },
    "source": [
     "## Kymographs\n",
     "\n",
@@ -722,7 +725,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
+   },
    "source": [
     "## Fluorescence Segmentation\n",
     "\n",
@@ -1058,10 +1064,12 @@
     "score_function = tr.tracking.scorefn(\n",
     "    headpath,\n",
     "    \"fluorsegmentation\",\n",
-    "    u_size=0.22,\n",
-    "    sig_size=0.08,\n",
-    "    u_pos=0.21,\n",
+    "    u_size=0.15,\n",
+    "    sig_size=0.07,\n",
+    "    u_pos=0.16,\n",
     "    sig_pos=0.1,\n",
+    "    w_pos=0.3,\n",
+    "    w_size=1.0,\n",
     "    w_merge=0.8,\n",
     ")"
    ]
@@ -1082,12 +1090,7 @@
    "outputs": [],
    "source": [
     "Tracking_Solver = tr.tracking.tracking_solver(\n",
-    "    headpath,\n",
-    "    \"fluorsegmentation\",\n",
-    "    ScoreFn=score_function,\n",
-    "    merge_per_iter=0,\n",
-    "    conv_tolerence=2,\n",
-    "    edge_limit=2,\n",
+    "    headpath, \"fluorsegmentation\", ScoreFn=score_function, edge_limit=2, t_chunk=200\n",
     ")\n",
     "data, orientation, empty_trenches = score_function.output.result"
    ]
